# LOCUS

./: .clang-format  .gitignore  .gitlab-ci-repos.yml  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  THANKS.md  build_blam  hello.sh  localizer_lo_frontend.code-workspace  locus.rviz  package.xml  run_blam.sh  testing_notes.md
core_msgs/: CMakeLists.txt  package.xml
core_msgs/msg/: MapInfo.msg
docker/: Dockerfile  (+1 more)
frontend_utils/: CMakeLists.txt  package.xml
frontend_utils/test/: test_common_functions.cpp
geometry_utils/: CMakeLists.txt  package.xml
geometry_utils/tests/: test_base.cc  test_equals.cc  test_math.cc  test_so3error.cc
gt_analysis/: CMakeLists.txt  README.md  package.xml
gt_analysis/config/: analyzer_settings.yaml
gt_analysis/costar_odometry_dataset/: A_Urban_Husky4_run_odometry_analysis.yaml  B_Urban_Spot1_run_odometry_analysis.yaml  C_Urban_Husky4_run_odometry_analysis.yaml  D_Tunnel_Husky4_run_odometry_analysis.yaml  E_Cave_Spot1_run_odometry_analysis.yaml  F_Tunnel_Husky4_run_odometry_analysis.yaml  G_Urban_Spot2_run_odometry_analysis.yaml  H_Tunnel_Husky1_run_odometry_analysis.yaml  I_Tunnel_Spot1_run_odometry_analysis.yaml  J_Tunnel_Husky1_run_odometry_analysis.yaml  K_Mix_Spot1_run_odometry_analysis.yaml  N_Mix_Husky2_run_odometry_analysis.yaml  O_Mix_Husky1_run_odometry_analysis.yaml  P_Mix_Spot1_run_odometry_analysis.yaml
gt_analysis/scripts/: analyzer.py  run_analyzer.yaml
gt_analysis/utilities/: aggregate_odometries.py  compute_distances_travelled.py  key_handling.py  loop_closure_eval.py  plot_factor_covariance.py  plot_odom_covariance.py  utilities.py
lidar_slip_detection/: CMakeLists.txt  package.xml
lidar_slip_detection/config/: parameters.yaml
lidar_slip_detection/include/: LidarSlipDetection.h
lidar_slip_detection/launch/: lidar_slip_detection.launch
lidar_slip_detection/src/: LidarSlipDetection.cc  lidar_slip_detection.cc
lo_frontend/: CMakeLists.txt  package.xml
lo_frontend/config/: blam_frames.yaml  blam_rates.yaml  lo_filtering_husky.yaml  lo_frames.yaml  lo_rates.yaml  lo_settings.yaml  lo_settings_spot.yaml
lo_frontend/launch/: lo_frontend.launch  lo_frontend_groundtruth.launch  lo_frontend_imu.launch  lo_frontend_ugv_pcm.launch  point_cloud_processing.launch
lo_frontend/rqt_multiplot_configs/: rqt_multiplot_config.xml
lo_frontend/src/: LoFrontend.cc  lo_frontend_node.cc  sensors_health_monitor.py
lo_frontend/test/: test_lo_frontend.cc  test_lo_frontend.test
lo_frontend/testing/: GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB  matteo.sh  open_space_detector.xml  rqt_multiplot.xml  rqt_multiplot_3.xml  rqt_multiplot_GT_VS_CF.xml  rqt_multiplot_GT_VS_CF_WITHOFF.xml  rqt_multiplot_WITHOFFSET.xml  rqt_multiplot_imu.xml  rqt_multiplot_imu_west_virginia.xml  run_groundtruth_test.sh  run_imu_test.sh  run_slow.sh  run_slow_palieri.sh  run_test.sh  run_test_matteo.sh  run_test_odom.sh  run_test_west_virginia.sh  subtract_offset_from_groundtruth.py  test.sh
localizer_lo_frontend/: CMakeLists.txt  package.xml
locus/: CMakeLists.txt  package.xml
locus/config/: body_filter_params_jackal.yaml  body_filter_params_spot.yaml  lo_frames.yaml  lo_settings.yaml
locus/launch/: locus.launch  locus_groundtruth.launch  point_cloud_processing.launch  robot_description.launch
locus/rviz/: husky1_locus.rviz  husky2_locus.rviz  husky3_locus.rviz  husky4_locus.rviz  lidar_slam.rviz  locus.rviz  spot1_locus.rviz  spot2_locus.rviz  spot3_locus.rviz  spot4_locus.rviz
locus/scripts/: odom_to_map_tf.py
locus/src/: Locus.cc  locus_node.cc  sensors_health_monitor.py
locus/test/: test_locus.cc  test_locus.test
measurement_synchronizer/: CMakeLists.txt  package.xml
measurement_synchronizer/src/: MeasurementSynchronizer.cc
measurement_synchronizer/test/: test_measurement_synchronizer.cpp
multithreaded_gicp/: CMakeLists.txt  README.md  package.xml
multithreaded_gicp/include/: registration_settings.h
multithreaded_gicp/test/: query_82_garage.pcd  reference_82_garage.pcd  test_same_output_different_num_threads.cpp
point_cloud_filter/: CMakeLists.txt  package.xml  pcl_ros_plugins.xml
point_cloud_filter/cfg/: BodyFilter.cfg  CustomVoxelGrid.cfg  NormalComputation.cfg
point_cloud_filter/config/: lamp_parameters.yaml  parameters.yaml
point_cloud_filter/src/: PointCloudFilter.cc  body_filter.cc  custom_voxel_grid.cc  normal_computation.cc  point_cloud_filter.cc
point_cloud_filter/test/: test_point_cloud_filter.cpp
point_cloud_localization/: CMakeLists.txt  package.xml
point_cloud_localization/config/: parameters.yaml  spot_parameters.yaml
point_cloud_localization/src/: PointCloudLocalization.cc  point_cloud_localization.cc  utils.cc
point_cloud_localization/test/: test_point_cloud_localization.cpp  test_point_cloud_localization.test
point_cloud_mapper/: CMakeLists.txt  package.xml
point_cloud_mapper/config/: parameters.yaml
point_cloud_mapper/src/: PointCloudIkdTreeMapper.cc  PointCloudMapper.cc  PointCloudMultiThreadedMapper.cc  SimplePointCloudMapper.cc  point_cloud_mapper.cc
point_cloud_mapper/test/: test_point_cloud_mapper.cpp
point_cloud_merger/: CMakeLists.txt  package.xml
point_cloud_merger/config/: parameters.yaml
point_cloud_merger/src/: PointCloudMerger.cc  point_cloud_merger.cc
point_cloud_merger/test/: test_point_cloud_merger.cpp
point_cloud_odometry/: CMakeLists.txt  package.xml
point_cloud_odometry/config/: parameters.yaml
point_cloud_odometry/src/: PointCloudOdometry.cc  point_cloud_odometry.cc
point_cloud_odometry/test/: test_point_cloud_odometry.cpp  test_point_cloud_odometry.test
sensor_description/: CMakeLists.txt  package.xml
sensor_description/config/: husky1_sensors.yaml  husky2_sensors.yaml  husky3_sensors.yaml  husky4_sensors.yaml  spot1_sensors.yaml  spot2_sensors.yaml  spot3_sensors.yaml
sensor_description/urdf/: robot_description.urdf.xacro
spot_frontend/: CMakeLists.txt  package.xml
spot_frontend/config/: spot_frames.yaml  spot_settings.yaml
spot_frontend/launch/: spot_frontend.launch
spot_frontend/src/: SpotFrontend.cc  spot_frontend_node.cc
(+196 files in other folders)
