<?xml version="1.0"?>
<package format="2">
  <name>core_msgs</name>
  <version>0.0.0</version>
  <description>The core_msgs package</description>

  <maintainer email="btlopez@mit.edu">Brett Lopez</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roadmap_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>artifact_msgs</depend>

</package>
