<?xml version="1.0"?>
<package format="2">
  <name>frontend_utils</name>
  <version>0.1.0</version>
  <description>The frontend_utils package</description>
  <maintainer email="andrzej.m.reinke@jpl.nasa.gov">Andrzej Reinke</maintainer>
  <license>JPL</license>
  <author >Andrzej Reinke</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp pcl_ros</build_depend>
  <build_export_depend>roscpp pcl_ros</build_export_depend>
  <exec_depend>roscpp pcl_ros</exec_depend>

  <export>  </export>
</package>
