<?xml version="1.0"?>
<package>
  <name>geometry_utils</name>
  <version>0.0.9</version>
  <description>geometry_utils</description>

  <author email="nmichael@cmu.edu">Nathan Michael</author>
  <author email="eanelson@eecs.berkeley.edu">Erik Nelson</author>
  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>tf2</run_depend>
</package>
