<?xml version="1.0"?>
<package>
  <name>lidar_slip_detection</name>
  <version>0.0.0</version>
  <description>The lidar_slip_detection package</description>

  <author email="kamak.ebadi@jpl.nasa.gov">Kamak Ebadi</author>
  <maintainer email="kamak.ebadi@jpl.nasa.gov">Kamak Ebadi</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>

</package>
