<?xml version="1.0"?>
<package>
  <name>lo_frontend</name>
  <version>0.0.0</version>
  <description>Front end odometry package</description>

  <author email="eanelson@eecs.berkeley.edu">Erik Nelson</author>
  <maintainer email="benjamin.morrell@jpl.nasa.gov">Benjamin Morrell</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>measurement_synchronizer</build_depend>
  <build_depend>point_cloud_filter</build_depend>
  <build_depend>point_cloud_odometry</build_depend>
  <build_depend>point_cloud_mapper</build_depend>
  <build_depend>point_cloud_localization</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>core_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>measurement_synchronizer</run_depend>
  <run_depend>point_cloud_filter</run_depend>
  <run_depend>point_cloud_odometry</run_depend>
  <run_depend>point_cloud_mapper</run_depend>
  <run_depend>point_cloud_merger</run_depend>
  <run_depend>point_cloud_localization</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>core_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
