<?xml version="1.0"?>
<package>
  <name>measurement_synchronizer</name>
  <version>0.0.0</version>
  <description>The measurement_synchronizer package</description>

  <author email="nmichael@cmu.edu">Nathan Michael</author>
  <author email="johnyao@cmu.edu">John Yao</author>
  <author email="eanelson@eecs.berkeley.edu">Erik Nelson</author>
  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
