<?xml version="1.0"?>
<package format="2">
  <name>multithreaded_gicp</name>
  <version>0.1.0</version>
  <description>Multithreaded implementation of gicp</description>
  <maintainer email="jeremy.nash@jpl.nasa.gov">Jeremy Nash</maintainer>
  <license>JPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>frontend_utils</depend>
  <export></export>
</package>
