<?xml version="1.0"?>
<package format="2">

  <name>point_cloud_filter</name>
  <version>0.0.0</version>
  <description>The point_cloud_filter package</description>
  <author email="todo@todo.todo">TODO</author>
  <maintainer email="todo@todo.todo">TODO</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>dynamic_reconfigure</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>frontend_utils</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>parameter_utils</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>frontend_utils</exec_depend>
  
  <export>
    <nodelet plugin="${prefix}/pcl_ros_plugins.xml" />
  </export>

</package>