<?xml version="1.0"?>
<package>
  <name>point_cloud_mapper</name>
  <version>0.0.0</version>
  <description>The point_cloud_mapper package</description>

  <author email="eanelson@eecs.berkeley.edu">Erik Nelson</author>
  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>core_msgs</build_depend>
  <build_depend>frontend_utils</build_depend>
  <!--build_depend>utils</build_depend-->


  <run_depend>roscpp</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>core_msgs</run_depend>
  <run_depend>frontend_utils</run_depend>
  <!--run_depend>utils</run_depend-->


  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
