<?xml version="1.0"?>
<package>
  <name>point_cloud_merger</name>
  <version>0.0.0</version>
  <description>The point_cloud_merger package</description>

  <author email="benjamin.morrell@jpl.nasa.gov">Benjamin Morrell</author>
  <maintainer email="benjamin.morrell@jpl.nasa.gov">Benjamin Morrell</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
