<?xml version="1.0"?>
<package>

  <name>point_cloud_odometry</name>
  <version>0.0.0</version>
  <description>Provides an interface for point cloud odometry based on gicp, implemented in a parallel way.</description>
  <author email="eanelson@eecs.berkeley.edu">Erik Nelson</author>
  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>multithreaded_gicp</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>frontend_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>multithreaded_gicp</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>frontend_utils</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>  
</package>
