<?xml version="1.0"?>
<package>
  <name>blam_example</name>
  <version>0.0.0</version>
  <description>The blam_example package</description>

  <author email="eanelson@eecs.berkeley.edu">Erik Nelson</author>
  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
